[project]
name = "dio-bank-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludwig S",email = "silvaludwig@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "jwt",
    "pydantic-settings",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "uvicorn[standard] (>=0.34.1,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
